--- a/fromscratch.html
+++ b/fromscratch.html
@@ -22,6 +22,7 @@
             <a href="fromscratch.html">About me</a><br>
             <a href="resume/resume.html">Resume</a><br>
             <a href="tableau/tableau.html">Tableau</a><br>
+            <a href="#youtubevideo">See Video Here!</a><br>
         </div>
 
         <div id="mainbody">
@@ -42,7 +43,6 @@
                 you see on this website are <br>parts that I still use. I hate doing things 
                 twice so we've done <br>our best to develop high quality speed parts that will 
                 last so <br>you won't be last.
-                <a href="#youtubevideo">See Video Here!</a>
                 <br><br><br><br><br><br><br><br><br><br><br>
                 
                 <div id="youtubevideo">
